--- a/estiloUX/CSS/estilo.css
+++ b/estiloUX/CSS/estilo.css
@@ -1,37 +1,137 @@
-
-  {
-    margin: 0;
-    padding: 0;
+* {
+    margin: 0%;
+    padding: 0%;
     box-sizing: border-box;
 }
 
 body {
-    
-    background-color: #EFEFEF;
+    background-color: #EFEFEFEF;
 }
 
-header {
-    width: 100%;
-    height: 80px;
-    background-color: #727272;
-}
-    
 h1 {
-    font-family: verdana, Geneva, Tahoma, sans-serif;
-    font-size: 30xp;
+    color: rgb(221, 222, 235);
+    font-family: sans-serif;
+    font-size: 27px;
+}
+
+a {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+}
+
+
+header, footer {
+    background-color: #393939;
+ width: 100%;
+ height: 80px;
+}
+
+h1 {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 29px;
     font-weight: 300;
     color: white;
+}
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+    width: 400px;
+
+}
+
+nav a {
+    display: flex;
+    width: 40%;
+    height: 60px;
+    justify-content: center;
+    align-items: center;
+    color: #EFEFEFEF;
+    text-decoration: none;
+    font-family: Verdana, sans-serif;
+    transition: background-color 0.4s, margin-left 0.8s, margin-buttom 0.8s, border-radius 0.4s;
+}
+
+nav a:hover {
+    color: #e8e8e8;
+    text-decoration: underline;
+    font-size: oblique;
+    background-color: rgba(207, 207, 207, 0.5);
+    margin-left: 10px;
+    margin-bottom: 10px;
+    border-radius: 17px;
+    text-shadow: 0px 5px 2.5px black;
+}
+.ux{
+font-size: 32px;
+margin-left: 1px;
+font-style: italic;
+font-weight: 600;
+font-family: monospace;
 }
 
 .layout-grid {
     width: 100%;
     height: 100%;
-    max-width: 1050px;
+    max-width: 992px;
     margin: 0 auto;
-    border:1px solid red;
+    
 }
 
 .header-flex {
     display: flex;
-    justify-content:space-between;
+    justify-content: space-between;
+    align-items: center;
 }
+main {
+    width: 100%;
+    height: 80%;
+    border: 3px solid red;
+}
+.main-flex {
+    border: 2px solid green;
+    justify-content: space-between;
+    display: flex;
+    align-items: center;
+    width:100% ;
+    height: 600px;
+   
+}
+
+.harmonia {
+    border: 2px solid blue;
+   
+    width: 700px;
+    height: 500px;
+    display: flex;
+    justify-content: flex-start;
+}
+
+aside {
+    border: 2px solid purple;
+    width: 250px ;
+    height: 500px ;
+   
+    justify-content: flex-end;
+}
+
+main {
+    width: 100%;
+    height: 800px ;
+    border: 1px solid red;
+}
+
+html, body {
+    height:100%;
+    border: 2px solid orange;
+}
+
+body {
+    background-color: #EFEFEFEF;
+    border: 2px solid blue;
+}
+ 
+
