--- a/estiloUX/CSS/estilo.css
+++ b/estiloUX/CSS/estilo.css
@@ -1,84 +1,27 @@
 * {
-    margin: 0%;
-    padding: 0%;
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
+html,
 body {
-    background-color: #EFEFEFEF;
-}
-
-h1 {
-    color: rgb(221, 222, 235);
-    font-family: sans-serif;
-    font-size: 27px;
-}
-
-a {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    text-decoration: none;
-    color: rgb(255, 255, 255);
-}
-
-
-header, footer {
-    background-color: #393939;
- width: 100%;
- height: 80px;
-}
-
-h1 {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 29px;
-    font-weight: 300;
-    color: white;
-}
-
-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     height: 100%;
-    width: 400px;
+    /* border: 2px solid orange; */
+}
+
+body {
+    background-color: #000f6f;
+    /* border: 2px solid blue; */
 
 }
 
-nav a {
-    display: flex;
-    width: 40%;
-    height: 60px;
-    justify-content: center;
-    align-items: center;
-    color: #EFEFEFEF;
-    text-decoration: none;
-    font-family: Verdana, sans-serif;
-    transition: background-color 0.4s, margin-left 0.8s, margin-buttom 0.8s, border-radius 0.4s;
-}
-
-nav a:hover {
-    color: #e8e8e8;
-    text-decoration: underline;
-    font-size: oblique;
-    background-color: rgba(207, 207, 207, 0.5);
-    margin-left: 10px;
-    margin-bottom: 10px;
-    border-radius: 17px;
-    text-shadow: 0px 5px 2.5px black;
-}
-.ux{
-font-size: 32px;
-margin-left: 1px;
-font-style: italic;
-font-weight: 600;
-font-family: monospace;
-}
-
-.layout-grid {
+header,
+footer {
     width: 100%;
-    height: 100%;
-    max-width: 992px;
-    margin: 0 auto;
-    
+    height: 10%;
+    background-color: #0a0ad5;
+    display: flex;
 }
 
 .header-flex {
@@ -86,52 +29,170 @@ font-family: monospace;
     justify-content: space-between;
     align-items: center;
 }
-main {
-    width: 100%;
-    height: 80%;
-    border: 3px solid red;
+
+h1 {
+    font-family: -apple-system;
+    font-size: 26px;
+    font-weight: 400;
+    color: white;
+
 }
-.main-flex {
-    border: 2px solid green;
-    justify-content: space-between;
+
+.ux {
+    font-size: 30px;
+    margin-left: 3px;
+    font-style: italic;
+    font-weight: 900;
+    font-family: -apple-system;
+
+}
+
+.layout-grid {
+    width: 100%;
+    height: 100%;
+    max-width: 992px;
+    margin: 0 auto;
+
+    /* border: 3px solid pink; */
+}
+
+nav {
+    width: 400px;
+    height: 100%;
+    /* border: 3px solid white; */
+
     display: flex;
     align-items: center;
-    width:100% ;
-    height: 600px;
-   
+    justify-content: space-around;
+}
+
+nav a {
+    width: 100px;
+    height: 80px;
+    /* border: 2px solid ; */
+
+    color: #e8e8e8;
+    text-decoration: none;
+    font-family: verdana, sans-serif;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: background-color 0.4s, margin-left 0.8s, margin-bottom 0.8s;
+}
+
+nav a:hover {
+    /* color: pink;
+    text-decoration: underline;
+    font-style: italic; */
+    margin-left: 10px;
+    margin-bottom: 10px;
+    background-color: rgba(230, 230, 230, 0.5);
+}
+
+.main-flex {
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    /* border: 2px solid green; */
 }
 
 .harmonia {
-    border: 2px solid blue;
-   
     width: 700px;
-    height: 500px;
-    display: flex;
-    justify-content: flex-start;
+    height: 100%;
+    background-color: rgb(0, 0, 0);
 }
 
-aside {
-    border: 2px solid purple;
-    width: 250px ;
-    height: 500px ;
-   
-    justify-content: flex-end;
-}
 
 main {
     width: 100%;
-    height: 800px ;
-    border: 1px solid red;
+    height: 80%;
+
+    padding-bottom: 20px;
+    padding-top: 20px;
 }
 
-html, body {
-    height:100%;
-    border: 2px solid orange;
+.harmonia img {
+    width: 100%;
 }
 
-body {
-    background-color: #EFEFEFEF;
-    border: 2px solid blue;
+.harmonia h2 {
+    font-weight: 400;
+    font-size: 16px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: #ababab;
+    margin-top: 25px;
+    margin-right: 20px;
+    margin-left: 20px;
+    
 }
- 
 
+.harmonia p {
+    font-weight: 400;
+    font-size: 16px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: #ababab;
+    margin-top: 20px;
+    margin-right: 20px;
+    margin-left: 20px;
+}
+
+aside {
+    width: 250px;
+    height: 100%;
+    background-color: #050506;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+aside article{
+    width: 100%;
+}
+
+aside article h3 {
+    width: 100%;
+    color: #ababab;
+    padding: 10px;
+    text-align: center;
+    text-transform: uppercase;
+    border-bottom: 2px solid blue;
+}
+aside article input,
+aside article button {
+
+    height: 25px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+aside article input {
+    border: 1px solid #a8a8a8;
+    outline: none;
+    padding-right: 5px;
+    padding-left: 5px;
+
+}
+aside article button {
+    width: 30px;
+    background-color: #727272;
+    color: white;
+    border: none;
+    border: 1px solid #727272;
+    cursor: pointer;
+}
+
+
+.buscar {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+
+    border-bottom: 10px;
+    background-color: #050506;
+}
+
+.posts{}
